--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
 		"styled-components": "5.2.3",
 		"twin.macro": "2.5.0",
 		"typescript": "^4.3.4",
+		"react-router-dom": "5.2.0",
 		"web-vitals": "^1.1.2"
 	},
 	"scripts": {
@@ -47,6 +48,7 @@
 		]
 	},
 	"devDependencies": {
+		"@types/react-router-dom": "^5.1.7",
 		"@types/styled-components": "^5.1.10"
 	}
 }
